using System.Windows;

namespace KR2;

public partial class JournalWindow : Window
{
    public JournalWindow()
    {
        InitializeComponent();
    }
}
